# tti_network

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  todo.md
data/raw/: stations.geojson
data/raw/tti_shape/: Microbacias_Tamanduatei.dbf  Microbacias_Tamanduatei.qmd  Microbacias_Tamanduatei.shp  Microbacias_Tamanduatei.shx
data/test/: edges.gpkg  nodes.gpkg  od_zones_filtered.dbf  od_zones_filtered.gpkg  od_zones_filtered.shp  od_zones_filtered.shx  results.txt  road_network.graphml
