[project]
name = "tti-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "joblib>=1.4.2",
    "matplotlib>=3.10.8",
    "networkit>=11.0",
    "networkx>=3.4",
    "numpy>=1.26.0",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "pyproj>=3.6.0",
]
